gateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: gateway
spec:
  rules:
  - host: gateway.microservico.local
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 80
